--- a/components/home/NewsSelector/NewsSelector.module.scss
+++ b/components/home/NewsSelector/NewsSelector.module.scss
@@ -2,7 +2,7 @@
 
 .wrapper{
     .marquee_btns{   
-        margin-bottom: calc(70px + (220 - 70) * ((100vw - 1200px) / (3840 - 1200)));
+        margin-bottom: calc(35px + (110 - 35) * ((100vw - 1200px) / (3840 - 1200)));
 
         .btn{
             position: relative;
@@ -16,9 +16,36 @@
             calc(24px + (84 - 24) * ((100vw - 1200px) / (3840 - 1200))) 
             0
             ;
-            border-bottom: solid $line-1 $gray-5;
+            border-bottom: $line-1 solid $gray-5;
+            @media screen and (max-width: 1024px){
+                padding:
+                calc(12px + (24 - 12) * ((100vw - 300px) / (1024 - 300)))
+                0
+                ;
+            }
             &:first-of-type{
-                border-top: solid $line-1 $gray-5;
+                border-top: $line-1 solid $gray-5;
+            }
+
+            .arrow{
+                position: absolute;
+                top: 0;
+                bottom: 0;
+                right: calc(86px + (524 - 86) * ((100vw - 1200px) / (3840 - 1200)));
+                margin-top: auto;
+                margin-bottom: auto;
+                width: calc(36px + (96 - 36) * ((100vw - 1200px) / (3840 - 1200)));
+                height: calc(36px + (96 - 36) * ((100vw - 1200px) / (3840 - 1200))); 
+                background-color: rgb(255, 255, 255);
+                background-image: url(../../../public/assets/icons/arrow_next_icon.svg);
+                background-repeat: no-repeat;
+                background-position: center;
+                background-size: 55%;    
+                border-radius: 50%;
+                z-index: 10;
+                @media screen and (max-width: 1024px){
+                    display: none;
+                }
             }
 
             span{
@@ -43,8 +70,50 @@
         margin:
         0
         auto
-        calc(70px + (220 - 70) * ((100vw - 1200px) / (3840 - 1200)))
+        calc(100px + (320 - 100) * ((100vw - 1200px) / (3840 - 1200)))
         auto
         ;
+        @media screen and (max-width: 1024px){
+            margin-bottom: calc(40px + (80 - 40) * ((100vw - 300px) / (1024 - 300)));
+        }
+        a{
+            position: relative;
+            @include font-level-2; 
+            text-decoration: none;
+            color: $deep-blue;
+            .arrow{ 
+                position: absolute;
+                top: 0;
+                bottom: 0;          
+                margin-top: auto;
+                margin-bottom: auto;            
+                width: calc(36px + (96 - 36) * ((100vw - 1200px) / (3840 - 1200)));
+                height: calc(36px + (96 - 36) * ((100vw - 1200px) / (3840 - 1200)));
+                background-color: $white;                
+                border-radius: 50%;
+                border: $line-1 solid $gray-3;
+                img{
+                    width: 55%;
+                    height: auto;
+                    position: absolute;
+                    top: 0;
+                    bottom: 0;
+                    left: 0;
+                    right: 0;
+                    margin: auto;
+                }
+            }
+            @media screen and (min-width: 1025px){
+                &:hover{
+                    .arrow{
+                        background-color: $deep-blue;
+                        border: $line-1 solid $deep-blue;     
+                        img{
+                            filter: grayscale(100%) brightness(20);
+                        }          
+                    }                    
+                }
+            }
+        }
     }
 }
