--- a/components/home/CoverVideo/CoverVideo.module.scss
+++ b/components/home/CoverVideo/CoverVideo.module.scss
@@ -2,7 +2,21 @@
 
 .container{
     background-color: $green-3;
-    width: calc(1128px + (3440 - 1128) * ((100vw - 1200px) / (3840 - 1200)));
-    height: 70vh;
-    margin: 0 auto;
+    width: calc(1128px + (3080 - 1128) * ((100vw - 1200px) / (3840 - 1200)));
+    height: calc(600px + (1638 - 600) * ((100vw - 1200px) / (3840 - 1200)));
+    margin:
+    0
+    auto
+    calc(65px + (230 - 65) * ((100vw - 1200px) / (3840 - 1200)))
+    auto
+    ;
+    @media screen and (max-width: 1024px){
+        width: calc(280px + (900 - 280) * ((100vw - 300px) / (1024 - 300)));
+        margin:
+        0
+        auto
+        calc(40px + (900 - 40) * ((100vw - 300px) / (1024 - 300)))
+        auto
+        ;
+    }
 }
