--- a/components/home/SectionSelector/SectionSelector.module.scss
+++ b/components/home/SectionSelector/SectionSelector.module.scss
@@ -11,6 +11,7 @@
         grid-template-areas: 'imagen-docente' 'nombre-docente' 'texto-docente'; 
         grid-template-columns: 100% 100% 100%;   
         height: auto; 
+        margin-bottom: calc(40px + (900 - 40) * ((100vw - 300px) / (1024 - 300)));
     } 
 
     .cta_title{
@@ -45,7 +46,7 @@
                 font-weight: 400;
                 line-height: 120%; 
                 letter-spacing: -0.015em;
-                color: rgba(3, 46, 89, 0.3);    
+                color: $gray-4;    
                 margin: 0 0 calc(12px + (34 - 12) * ((100vw - 1200px) / (3840 - 1200))) 0;
                 cursor: pointer;
                 transition: all 0.3s ease;
@@ -86,15 +87,11 @@
                     }
                     span{                            
                         height: 100%;
-                        background-color: rgba(3, 46, 89, 0.3);
-                        @media screen and (max-width: 1025px){ 
-                            height: 0%;
-                            background-color: rgba(3, 46, 89, 0);
-                        }
+                        background-color: $gray-4;
                     }
                 }
                 &.active{
-                    color: rgba(3, 46, 89, 1); 
+                    color: $deep-blue; 
                     padding-left: calc(20px + (56 - 20) * ((100vw - 1200px) / (3840 - 1200)));
                     @media screen and (max-width: 1025px){                                 
                         margin:
@@ -183,12 +180,12 @@
         p{
             @include font-level-4;
             line-height: 144%;
-            color: #032e59;
+            color: $deep-blue;
             margin-top: 0;
             margin-bottom: calc(35px + (85 - 35) * ((100vw - 1200px) / (3840 - 1200)));
             strong{
                 font-weight: 400;
-                border-bottom: calc(2px + (4 - 2) * ((100vw - 1200px) / (3840 - 1200))) solid #ffd658;
+                border-bottom: $line-2 solid $yellow-1;
             }
             @media screen and (max-width: 1025px){  
                 font-size: calc(11px + (20 - 11) * ((100vw - 300px) / (1025 - 300)));                           
@@ -196,9 +193,6 @@
         }
         button{
             @include btn-ver-mas;
-            &:hover{
-                border-bottom: calc(2px + (4 - 2) * ((100vw - 1200px) / (3840 - 1200))) solid #032e59;
-            }
             @media screen and (max-width: 1025px){  
                 font-size: calc(11px + (20 - 11) * ((100vw - 300px) / (1025 - 300)));                           
             }
