--- a/pages/asesorias/asesorias.module.scss
+++ b/pages/asesorias/asesorias.module.scss
@@ -9,11 +9,19 @@
     margin-bottom: calc(85px + (290 - 85) * ((100vw - 1200px) / (3840 - 1200)));
 }
 
+.keys_box{
+    margin-bottom: calc(85px + (290 - 85) * ((100vw - 1200px) / (3840 - 1200)));
+}
+
 .carrousel_proyects{
     margin-bottom: calc(85px + (290 - 85) * ((100vw - 1200px) / (3840 - 1200)));
-    .card{
-        width: calc(450px + (1150 - 450) * ((100vw - 1200px) / (3840 - 1200)));
+    .card_proyect{
+        width: calc(450px + (1320 - 450) * ((100vw - 1200px) / (3840 - 1200)));
         margin-left: calc(32px + (82 - 32) * ((100vw - 1200px) / (3840 - 1200)));
+        img{
+            width: 100%;
+            height: auto;
+        }
         h5{
             @include font-level-3;
             font-weight: 400;
@@ -22,12 +30,7 @@
     }
 }
 
-.quotes_container{
-    @include container-width-1;
-    margin-bottom: calc(85px + (290 - 85) * ((100vw - 1200px) / (3840 - 1200)));
-}
 
 .brands_marquee{
     margin-bottom: calc(85px + (290 - 85) * ((100vw - 1200px) / (3840 - 1200)));
 }
-
