--- a/pages/formacion/formacion.module.scss
+++ b/pages/formacion/formacion.module.scss
@@ -1,16 +1,17 @@
 @import "../../styles/themeStyles.module.scss";
 
 .marquee_1{
-    margin-bottom: calc(85px + (290 - 85) * ((100vw - 1200px) / (3840 - 1200)));
+    margin-bottom: calc(50px + (200 - 50) * ((100vw - 1200px) / (3840 - 1200)));
 }
 
-.quotes_container{
-    @include container-width-1;
-    margin-bottom: calc(85px + (290 - 85) * ((100vw - 1200px) / (3840 - 1200)));
+.marquee_2{
+    margin-bottom: calc(80px + (280 - 80) * ((100vw - 1200px) / (3840 - 1200)));
 }
 
-.carrousel_formacion{
-    margin-bottom: calc(85px + (350 - 85) * ((100vw - 1200px) / (3840 - 1200)));
+
+
+.carrousel_formacion{    
+    margin-bottom: calc(35px + (150 - 35) * ((100vw - 1200px) / (3840 - 1200)));    
     .card{
         @include basic-card-1; 
         img{
@@ -18,9 +19,6 @@
         }
         p{
             margin-bottom: calc(25px + (75 - 25) * ((100vw - 1200px) / (3840 - 1200)));
-        }
-        a{
-            @include btn-ver-mas;
         }
     }
 }
