--- a/pages/investigacion/investigacion.module.scss
+++ b/pages/investigacion/investigacion.module.scss
@@ -9,33 +9,17 @@
     margin-bottom: calc(85px + (290 - 85) * ((100vw - 1200px) / (3840 - 1200)));
 }
 
+.keys_box{
+    margin-bottom: calc(85px + (290 - 85) * ((100vw - 1200px) / (3840 - 1200)));
+}
 
+.themes_accordion{
+    margin-bottom: calc(85px + (290 - 85) * ((100vw - 1200px) / (3840 - 1200)));
+}
 
-/* .carrousel_projects{
-    margin-bottom: calc(85px + (350 - 85) * ((100vw - 1200px) / (3840 - 1200)));
+ .carrousel_projects{
+    margin-bottom: calc(60px + (160 - 60) * ((100vw - 1200px) / (3840 - 1200)));
     .card{
-        background-color: $gray-6;
-        width: calc(250px + (1500 - 250) * ((100vw - 1200px) / (3840 - 1200)));
-        padding: calc(15px + (60 - 15) * ((100vw - 1200px) / (3840 - 1200)));
-        margin-left: calc(20px + (80 - 20) * ((100vw - 1200px) / (3840 - 1200)));
-        color: $deep-blue;  
-        img{
-            width: 100%;
-            height: auto;
-            margin-bottom: calc(20px + (40 - 20) * ((100vw - 1200px) / (3840 - 1200)));
-        }
-        h5{
-            @include font-level-2; 
-            font-weight: 400;
-            margin-bottom: calc(20px + (40 - 20) * ((100vw - 1200px) / (3840 - 1200)));
-        }
-        p{
-            @include font-level-4; 
-            font-weight: 400;
-            margin-bottom: calc(20px + (40 - 20) * ((100vw - 1200px) / (3840 - 1200)));
-        }
-        a{
-            @include btn-ver-mas;
-        }
+        @include basic-card-2; 
     }
-} */
+} 
