--- a/pages/novedades/novedades.module.scss
+++ b/pages/novedades/novedades.module.scss
@@ -5,7 +5,7 @@
 }
 
 
-.wrapper{
+.filters_cont{
     display: flex;
     align-items: center;
     @include container-width-1;
@@ -15,10 +15,15 @@
     }
     .category{
         width: 85%; 
-        margin: 40px 5% 40px 0;  
+        margin:
+        0
+        0
+        calc(75px + (235 - 75) * ((100vw - 1200px) / (3840 - 1200)))
+        0;  
         .btn_filter{
             @include btn-ver-mas;
             border-color: $gray-2;
+            text-transform: capitalize;
             margin: 6px 0;
             @media screen and (min-width: 1024px){
                 &:hover{
